--- a/listableviewdemo/.gitignore
+++ b/listableviewdemo/.gitignore
@@ -1,9 +1,9 @@
 ﻿#屏蔽当前目录下的所有文件
 /*
 #追踪目录/文件
-!/andcustom
-!/listableviewdemo
+!/libs
+!/src
 !/*.gitignore
 !build.gradle
-!settings.gradle
 !README.org
+!proguard-rules.pro
