--- a/listableviewdemo/build.gradle
+++ b/listableviewdemo/build.gradle
@@ -1,10 +1,11 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
+        applicationId "com.custom.listableviewdemo"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -19,7 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
+
+    compile project(':andcustom')
 }
